--- a/Tests/Grid/Grid/Grid/Grid.csproj
+++ b/Tests/Grid/Grid/Grid/Grid.csproj
@@ -109,6 +109,7 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="Hexagon.cs" />
+    <Compile Include="Mathfunktions.cs" />
     <Compile Include="Plane.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
