--- a/Tests/Grid - Kopie/Grid/Grid/Grid.csproj
+++ b/Tests/Grid - Kopie/Grid/Grid/Grid.csproj
@@ -110,6 +110,8 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Hexagon.cs" />
     <Compile Include="Object.cs" />
+    <Compile Include="Particle.cs" />
+    <Compile Include="ParticleGenerator.cs" />
     <Compile Include="Plane.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
