--- a/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
+++ b/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Entity\Creature.cs" />
     <Compile Include="Entity\Thing.cs" />
     <Compile Include="Entity\Vars_Func.cs" />
+    <Compile Include="Logic\Interaction.cs" />
     <Compile Include="Logic\Mapgenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
