--- a/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
+++ b/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
@@ -107,6 +107,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animation\AnimationModel.cs" />
+    <Compile Include="Animation\AnimationPlayer.cs" />
+    <Compile Include="Animation\Bone.cs" />
+    <Compile Include="Basic\BasicModel.cs" />
     <Compile Include="Entity\Nest.cs" />
     <Compile Include="Entity\Wall.cs" />
     <Compile Include="Environment\Hexagon.cs" />
@@ -135,6 +139,14 @@
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AnimationAux\AnimationAux.csproj">
+      <Project>{F2F7FA8C-1FC7-42CC-93D8-E5DFF48AC09B}</Project>
+      <Name>AnimationAux</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\AnimationPipeline\AnimationPipeline.csproj">
+      <Project>{FF2FBE94-50B5-4E78-9592-B95F32A8881E}</Project>
+      <Name>AnimationPipeline</Name>
+    </ProjectReference>
     <ProjectReference Include="..\UnderlordContent\UnderlordContent.contentproj">
       <Name>UnderlordContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
