- Add ImpModel.cs# to encapsulated AnimationModels and -Clips - Made some simple connections to AI-Imp-Logic

--- a/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
+++ b/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Animation\AnimationModel.cs" />
     <Compile Include="Animation\AnimationPlayer.cs" />
     <Compile Include="Animation\Bone.cs" />
+    <Compile Include="Animation\ImpModel.cs" />
     <Compile Include="Basic\BasicModel.cs" />
     <Compile Include="Entity\Nest.cs" />
     <Compile Include="Entity\Wall.cs" />
