--- a/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
+++ b/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
@@ -121,13 +121,13 @@
     <Compile Include="Environment\Room.cs" />
     <Compile Include="Logic\AI.cs" />
     <Compile Include="Entity\Upgrade.cs" />
-    <Compile Include="Logic\Ability.cs" />
     <Compile Include="Entity\Creature.cs" />
     <Compile Include="Entity\Thing.cs" />
-    <Compile Include="Entity\Vars_Func.cs" />
+    <Compile Include="Logic\Vars_Func.cs" />
     <Compile Include="Logic\Interaction.cs" />
     <Compile Include="Logic\Job.cs" />
     <Compile Include="Logic\Mapgenerator.cs" />
+    <Compile Include="Logic\Speels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
