--- a/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
+++ b/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
@@ -124,11 +124,12 @@
     <Compile Include="Entity\Creature.cs" />
     <Compile Include="Entity\Thing.cs" />
     <Compile Include="Logic\GUI_Element.cs" />
+    <Compile Include="Logic\Player.cs" />
     <Compile Include="Logic\Vars_Func.cs" />
     <Compile Include="Logic\Interaction.cs" />
     <Compile Include="Logic\Job.cs" />
     <Compile Include="Logic\Mapgenerator.cs" />
-    <Compile Include="Logic\Speels.cs" />
+    <Compile Include="Logic\Spells.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
