--- a/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
+++ b/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
@@ -112,6 +112,8 @@
     <Compile Include="Animation\Bone.cs" />
     <Compile Include="Animation\ImpModel.cs" />
     <Compile Include="Basic\BasicModel.cs" />
+    <Compile Include="Basic\FireModel.cs" />
+    <Compile Include="Basic\LightModel.cs" />
     <Compile Include="Entity\Farm.cs" />
     <Compile Include="Entity\Nest.cs" />
     <Compile Include="Entity\Temple.cs" />
