--- a/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
+++ b/VS Projekt/Underlord/Underlord/Underlord/Underlord.csproj
@@ -132,8 +132,10 @@
     <Compile Include="Logic\GUI_Element.cs" />
     <Compile Include="Logic\Highscore_GUI.cs" />
     <Compile Include="Logic\IngameMenu_GUI.cs" />
+    <Compile Include="Logic\InputController.cs" />
     <Compile Include="Logic\IntroMenu_GUI.cs" />
     <Compile Include="Logic\MainMenu_GUI.cs" />
+    <Compile Include="Logic\InsertNameGUI.cs" />
     <Compile Include="Logic\Player.cs" />
     <Compile Include="Logic\Setting_GUI.cs" />
     <Compile Include="Logic\StartMenu_GUI.cs" />
