--- a/VS Projekt/Underlord/Underlord/AnimationPipeline/Pipeline.csproj
+++ b/VS Projekt/Underlord/Underlord/AnimationPipeline/Pipeline.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AnimationPipeline</RootNamespace>
+    <RootNamespace>Pipeline</RootNamespace>
     <AssemblyName>AnimationPipeline</AssemblyName>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
@@ -49,15 +49,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnimationClipWriter.cs" />
-    <Compile Include="ModelExtraWriter.cs" />
-    <Compile Include="AnimationProcessor.cs" />
+    <Compile Include="Writer\ClipWriter.cs" />
+    <Compile Include="Writer\AnimationDataWriter.cs" />
+    <Compile Include="AnimationImportPipeline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AnimationAux\AnimationAux.csproj">
+    <ProjectReference Include="..\AnimationAux\Animation.csproj">
       <Project>{F2F7FA8C-1FC7-42CC-93D8-E5DFF48AC09B}</Project>
-      <Name>AnimationAux</Name>
+      <Name>Animation</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
